[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/Comfortaa/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/UI.gd" type="Script" id=2]
[ext_resource path="res://assests/others/backButton.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="sign_label" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 59.0
margin_right = -4.0
margin_bottom = -590.0
custom_fonts/font = SubResource( 1 )
text = "Sign"
align = 1
valign = 1

[node name="scoreLabel" type="Label" parent="."]
margin_left = 88.0
margin_top = 14.0
margin_right = 263.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "Score : 0"
align = 1
valign = 1

[node name="lifeLabel" type="Label" parent="."]
margin_left = 352.0
margin_top = 15.0
margin_right = 484.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 3 )
text = "Life : 3"
align = 1
valign = 1

[node name="BackButton" type="TextureButton" parent="."]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 3 )

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
